--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^13.1.2",
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "latest",
     "@tabler/icons-react": "^2.10.0",
     "@tanstack/react-query": "^4.16.1",
     "argon2": "^0.30.3",
@@ -82,6 +82,7 @@
     "next-router-mock": "^0.8.0",
     "nextjs-bundle-analysis": "^0.4.0",
     "prettier": "^2.8.0",
-    "prisma": "^4.10.1"
-  }
+    "prisma": "latest"
+  },
+  "packageManager": "yarn@3.5.0"
 }
