--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "test": "jest",
     "format:check": "prettier -c .",
     "lint-strict-fix": "eslint --fix . && yarn format",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^13.1.2",
-    "@prisma/client": "latest",
+    "@prisma/client": "^4.12.0",
     "@tabler/icons-react": "^2.10.0",
     "@tanstack/react-query": "^4.16.1",
     "argon2": "^0.30.3",
@@ -29,7 +30,7 @@
     "framer-motion": "^8.5.2",
     "imagekit": "^4.1.2",
     "jotai": "^2.0.2",
-    "next": "^13.2.1",
+    "next": "13.2.4",
     "next-auth": "^4.19.2",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
@@ -44,7 +45,7 @@
     "socket.io-client": "^4.6.1",
     "throttle-debounce": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "5.0.2",
+    "typescript": "5.0.3",
     "uuid": "^9.0.0",
     "zod": "^3.19.1"
   },
@@ -72,7 +73,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
