--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "react-infinite-scroll-hook": "^4.0.4",
     "sass": "^1.58.0",
     "socket.io-client": "^4.6.1",
-    "throttle-debounce": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "5.0.3",
     "uuid": "^9.0.0",
@@ -59,7 +58,6 @@
     "@types/node": "^18.11.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/throttle-debounce": "^5.0.0",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
@@ -82,7 +80,7 @@
     "next-router-mock": "^0.8.0",
     "nextjs-bundle-analysis": "^0.4.0",
     "prettier": "^2.8.0",
-    "prisma": "latest"
+    "prisma": "4.12.0"
   },
   "packageManager": "yarn@3.5.0"
 }
