--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "test": "jest",
     "format:check": "prettier -c .",
     "lint-strict-fix": "eslint --fix . && yarn format",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build",
+    "vercel-build": "next build",
     "postinstall": "husky install"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@next/bundle-analyzer": "^13.1.2",
-    "@prisma/client": "^4.12.0",
     "@tabler/icons-react": "^2.10.0",
     "@tanstack/react-query": "^4.16.1",
     "argon2": "^0.30.3",
@@ -77,8 +76,7 @@
     "msw": "^1.0.0",
     "next-router-mock": "^0.8.0",
     "nextjs-bundle-analysis": "^0.4.0",
-    "prettier": "^2.8.0",
-    "prisma": "4.12.0"
+    "prettier": "^2.8.0"
   },
   "packageManager": "yarn@3.5.0"
 }
