--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@next/bundle-analyzer": "^13.1.2",
     "@tabler/icons-react": "^2.10.0",
     "@tanstack/react-query": "^4.16.1",
-    "argon2": "^0.30.3",
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
+    "cookies": "^0.8.0",
+    "cookies-next": "^2.1.1",
     "framer-motion": "^8.5.2",
     "imagekit": "^4.1.2",
     "jotai": "^2.0.2",
+    "ms": "^2.1.3",
     "next": "13.2.4",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
