--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,1 @@
-DATABASE_URL=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-IMG_KIT_PRIVATE=
-
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
-
-NEXT_PUBLIC_IMG_KIT_PUBLIC=
-NEXT_PUBLIC_IMG_KIT_ENDPOINT=
-NEXT_PUBLIC_WS_URL=
+NEXT_PUBLIC_API_ROOT=
