--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "ignorePatterns": [
-    "public/*"
+    "public/*",
+    ".yarn/*"
   ],
   "rules": {
     "prettier/prettier": "error",
