--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,8 @@
     "utils/env.js"
   ],
   "exclude": [
-    "node_modules"
-  ],
+    "node_modules",
+    "cypress.config.ts",
+    "cypress"
+  ]
 }
