--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "@hookform/resolvers": "^2.9.10",
     "@next/bundle-analyzer": "^13.4.13",
     "@tabler/icons-react": "^2.10.0",
-    "@tanstack/react-query": "^4.16.1",
-    "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
+    "@tanstack/react-query": "^5.0.0-beta.0",
+    "@tanstack/react-query-next-experimental": "^5.0.0-beta.0",
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
     "framer-motion": "^8.5.2",
     "imagekit": "^4.1.2",
     "jotai": "^2.0.2",
-    "next": "13.4.13",
+    "next": "13.4.16",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
-    "@tanstack/react-query-devtools": "^4.24.4",
+    "@tanstack/react-query-devtools": "^5.0.0-beta.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
