--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
-    "bufferutil": "^4.0.7",
     "cypress": "^12.14.0",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.17",
@@ -78,8 +77,6 @@
     "lint-staged": "^13.1.0",
     "msw": "^1.0.0",
     "next-router-mock": "^0.8.0",
-    "prettier": "^2.8.0",
-    "supports-color": "^9.4.0",
-    "utf-8-validate": "^6.0.3"
+    "prettier": "^2.8.0"
   }
 }
