--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@tabler/icons-react": "^2.10.0",
     "@tanstack/react-query": "^5.0.0-beta.0",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.0",
-    "axios": "^1.2.0",
     "clsx": "^1.2.1",
     "framer-motion": "^8.5.2",
     "imagekit": "^4.1.2",
@@ -42,7 +41,7 @@
     "react-hot-toast": "^2.4.0",
     "react-intersection-observer": "^9.5.2",
     "sass": "^1.58.0",
-    "socket.io-client": "^4.6.1",
+    "socket.io-client": "^4.7.2",
     "typescript": "5.0.3",
     "zod": "^3.19.1"
   },
@@ -58,6 +57,7 @@
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "bufferutil": "^4.0.7",
     "cypress": "^12.14.0",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.17",
@@ -76,6 +76,7 @@
     "lint-staged": "^13.1.0",
     "msw": "^1.0.0",
     "next-router-mock": "^0.8.0",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "utf-8-validate": "^6.0.3"
   }
 }
