--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "framer-motion": "^8.5.2",
     "imagekit": "^4.1.2",
     "jotai": "^2.0.2",
-    "next": "13.4.17",
+    "next": "^13.4.19",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
