--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@next/bundle-analyzer": "^13.4.13",
-    "@tabler/icons-react": "^2.30.0",
+    "@phosphor-icons/react": "^2.0.10",
     "@tanstack/react-query": "^5.0.0-beta.0",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.0",
     "clsx": "^1.2.1",
