--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^8.5.2",
     "imagekit": "^4.1.2",
     "jotai": "^2.4.2",
+    "lodash.debounce": "^4.0.8",
     "next": "^13.4.19",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -54,6 +55,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.5",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.11.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
