--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@next/bundle-analyzer": "^13.4.13",
     "@phosphor-icons/react": "^2.0.10",
+    "@react-aria/overlays": "^3.17.0",
     "@tanstack/react-query": "^5.0.0-beta.31",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.31",
     "clsx": "^1.2.1",
