--- a/package.json
+++ b/package.json
@@ -23,65 +23,64 @@
     "lint-format": "pnpm format && pnpm lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.10",
-    "@next/bundle-analyzer": "^13.4.13",
-    "@phosphor-icons/react": "^2.0.10",
+    "@hookform/resolvers": "^3.3.1",
+    "@next/bundle-analyzer": "^13.5.3",
+    "@phosphor-icons/react": "^2.0.13",
     "@react-aria/overlays": "^3.17.0",
-    "@tanstack/react-query": "^5.0.0-beta.31",
-    "@tanstack/react-query-next-experimental": "^5.0.0-beta.31",
-    "clsx": "^1.2.1",
-    "framer-motion": "^8.5.2",
-    "imagekit": "^4.1.2",
+    "@tanstack/react-query": "^5.0.0-rc.1",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
+    "imagekit": "^4.1.3",
     "jotai": "^2.4.2",
     "lodash.debounce": "^4.0.8",
-    "next": "^13.5.2",
+    "next": "^13.5.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-easy-crop": "^4.7.3",
-    "react-focus-lock": "^2.9.2",
-    "react-hook-form": "^7.39.5",
-    "react-hot-toast": "^2.4.0",
+    "react-easy-crop": "^5.0.2",
+    "react-focus-lock": "^2.9.5",
+    "react-hook-form": "^7.46.2",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.2",
-    "sass": "^1.58.0",
+    "sass": "^1.68.0",
     "socket.io-client": "^4.7.2",
     "typescript": "5.2.2",
-    "zod": "^3.19.1"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
-    "@tanstack/react-query-devtools": "^5.0.0-beta.31",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@tanstack/react-query-devtools": "^5.0.0-rc.1",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.5",
     "@types/lodash.debounce": "^4.0.7",
-    "@types/node": "^18.11.13",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@types/node": "^20.7.0",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "bufferutil": "^4.0.7",
-    "cypress": "^12.14.0",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "^13.2.17",
+    "cypress": "^13.2.0",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.3",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^27.1.6",
-    "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-jest": "^27.4.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "eslint-plugin-testing-library": "^5.9.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-testing-library": "^6.0.2",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.4.2",
-    "lint-staged": "^13.1.0",
-    "msw": "^1.0.0",
-    "next-router-mock": "^0.8.0",
-    "prettier": "^2.8.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^14.0.1",
+    "msw": "^1.3.1",
+    "next-router-mock": "^0.9.10",
+    "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "utf-8-validate": "^6.0.3"
   }
