--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "*.{js,jsx,ts,tsx,md,mdx}": "pnpm format --cache"
   },
   "packageManager": "pnpm@8.7.6",
+  "proxy": "http://localhost:3001",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
