--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.2.0",
   "private": true,
   "lint-staged": {
-    "*.{js,ts,jsx,tsx}": "pnpm lint",
-    "*.{js,jsx,ts,tsx,md,mdx}": "pnpm format --cache"
+    "src/**/*.{js,ts,jsx,tsx}": "pnpm lint",
+    "src/**/*.{js,jsx,ts,tsx,md,mdx}": "pnpm format --cache"
   },
   "packageManager": "pnpm@8.7.6",
   "proxy": "http://localhost:3001",
@@ -31,7 +31,7 @@
     "@phosphor-icons/react": "^2.0.13",
     "@qdrant/openapi-typescript-fetch": "^1.2.1",
     "@react-aria/overlays": "^3.17.0",
-    "@tanstack/react-query": "^5.0.0-rc.7",
+    "@tanstack/react-query": "^5.0.0-rc.16",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "imagekit": "^4.1.3",
