--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@phosphor-icons/react": "^2.0.13",
     "@qdrant/openapi-typescript-fetch": "^1.2.1",
     "@react-aria/overlays": "^3.17.0",
-    "@tanstack/react-query": "^5.0.0-rc.16",
+    "@tanstack/react-query": "^5.0.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "imagekit": "^4.1.3",
