--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@tanstack/react-query-devtools": "^5.0.0-rc.4",
+    "@tanstack/react-query-devtools": "^5.0.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/lodash.debounce": "^4.0.7",
