--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@next/bundle-analyzer": "^13.5.3",
     "@phosphor-icons/react": "^2.0.13",
     "@qdrant/openapi-typescript-fetch": "^1.2.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@react-aria/overlays": "^3.17.0",
     "@tanstack/react-query": "^5.0.0",
     "clsx": "^2.0.0",
