--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@phosphor-icons/react": "^2.0.13",
     "@qdrant/openapi-typescript-fetch": "^1.2.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-aria/overlays": "^3.17.0",
     "@tanstack/react-query": "^5.0.0",
     "clsx": "^2.0.0",
@@ -38,7 +39,7 @@
     "imagekit": "^4.1.3",
     "jotai": "^2.4.2",
     "lodash.debounce": "^4.0.8",
-    "next": "^13.5.4",
+    "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
