--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@qdrant/openapi-typescript-fetch": "^1.2.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@react-aria/overlays": "^3.17.0",
     "@tanstack/react-query": "^5.0.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
@@ -47,6 +46,7 @@
     "react-focus-lock": "^2.9.5",
     "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.2",
+    "react-remove-scroll": "^2.5.7",
     "sass": "^1.68.0",
     "socket.io-client": "^4.7.2",
     "sonner": "^1.0.3",
