--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.2",
     "react-remove-scroll": "^2.5.7",
+    "react-responsive": "^9.0.2",
     "sass": "^1.68.0",
     "socket.io-client": "^4.7.2",
     "sonner": "^1.0.3",
