--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Fullstack Next,js social app. In photo-app you can sign up via google and upload your favourite photos.",
   "version": "0.2.0",
   "private": true,
+  "type": "module",
   "lint-staged": {
     "**/*.{js,ts,jsx,tsx}": "pnpm lint",
     "**/*.{js,jsx,ts,tsx,md,mdx}": "pnpm format --cache"
@@ -18,7 +19,7 @@
     "vercel-build": "next build",
     "postinstall": "husky install",
     "generate-types": "openapi-typescript http://localhost:3001/documentation/json --output types.ts",
-    "lint": "eslint --fix --max-warnings=0 \"**/*.{js,ts,jsx,tsx}\"",
+    "lint": "eslint --fix --max-warnings=0",
     "format": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx}\"",
     "lint-format": "pnpm format && pnpm lint",
     "test": "vitest",
@@ -57,7 +58,10 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@eslint/compat": "^1.0.1",
+    "@eslint/eslintrc": "^3.0.2",
     "@faker-js/faker": "^8.2.0",
+    "@next/eslint-plugin-next": "^14.2.3",
     "@tanstack/react-query-devtools": "^5.36.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -65,21 +69,20 @@
     "@types/node": "^20.7.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-react": "^4.1.0",
     "@vitest/coverage-v8": "^0.34.6",
     "bufferutil": "^4.0.7",
     "cypress": "^13.2.0",
-    "eslint": "^8.50.0",
+    "eslint": "^9.2.0",
     "eslint-config-next": "^14.2.3",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react-compiler": "0.0.0-experimental-53bb89e-20240515",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-testing-library": "^6.0.2",
-    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-testing-library": "^6.2.2",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^22.1.0",
@@ -89,6 +92,7 @@
     "next-router-mock": "^0.9.13",
     "openapi-typescript": "^6.7.0",
     "prettier": "^3.0.3",
+    "typescript-eslint": "8.0.0-alpha.13",
     "utf-8-validate": "^6.0.3",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.6",
