--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
     "build": "NODE_ENV=production pnpm prisma generate && pnpm tsc",
     "build:dev": "pnpm prisma generate && pnpm tsc",
     "start": "node ./dist",
+    "restart-deploy": "../.startOrRestart.sh",
     "check-types": "tsc --noEmit",
     "dev": "pnpm nodemon ./src/index.ts"
   },
@@ -34,6 +35,8 @@
     "file-type": "^18.5.0",
     "imagekit": "^4.1.3",
     "ms": "^2.1.3",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "prisma": "^5.13.0",
     "short-unique-id": "^5.0.3",
     "socket.io": "^4.6.1",
@@ -44,6 +47,7 @@
     "@swc/core": "1.5.7",
     "@types/express-mysql-session": "^2.1.3",
     "@types/ms": "^0.7.31",
+    "@types/pg": "^8.11.6",
     "@types/uuid": "^9.0.1",
     "nodemon": "^3.1.0",
     "prettier": "^2.8.4",
