--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "check-types": "tsc --skipLibCheck --noEmit",
     "format:check": "prettier -c .",
@@ -15,22 +16,21 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
-    "@next/bundle-analyzer": "15.0.0-rc.0",
     "@phosphor-icons/react": "^2.0.13",
     "@qdrant/openapi-typescript-fetch": "^1.2.6",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.36.1",
-    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
+    "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
     "clsx": "^2.1.1",
     "imagekit": "^5.0.1",
     "jotai": "^2.8.0",
     "lodash.debounce": "^4.0.8",
     "nanoid": "^5.0.7",
-    "next": "15.0.0-rc.0",
+    "next": "15.0.0-canary.7",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react": "19.0.0-rc-6d3110b4d9-20240531",
+    "react-dom": "19.0.0-rc-6d3110b4d9-20240531",
     "react-easy-crop": "^5.0.7",
     "react-focus-lock": "^2.12.1",
     "react-hook-form": "^7.51.4",
@@ -38,36 +38,19 @@
     "react-remove-scroll": "^2.5.10",
     "react-responsive": "^10.0.0",
     "sass": "^1.77.1",
-    "sharp": "^0.33.3",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
-    "typescript": "5.4.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.2.0",
+    "@next/bundle-analyzer": "15.0.0-canary.7",
     "@tanstack/react-query-devtools": "^5.36.1",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.7.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.1.0",
-    "@vitest/coverage-v8": "^0.34.6",
-    "bufferutil": "^4.0.7",
-    "cypress": "^13.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jsdom": "^22.1.0",
-    "lint-staged": "^15.2.2",
-    "msw": "^1.3.2",
-    "msw-auto-mock": "^0.15.0",
-    "next-router-mock": "^0.9.13",
     "openapi-typescript": "^6.7.0",
-    "prettier": "^3.0.3",
-    "utf-8-validate": "^6.0.3",
-    "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^0.34.6",
-    "vitest-dom": "^0.1.1"
+    "prettier": "^3.2.5",
+    "typescript": "5.4.5"
   }
 }
