--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "monorepo-root",
+  "packageManager": "pnpm@9.1.4",
   "private": true,
   "scripts": {
     "build": "turbo build",
@@ -16,21 +17,22 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/compat": "^1.0.1",
-    "@eslint/eslintrc": "^3.0.2",
-    "@next/eslint-plugin-next": "15.0.0-rc.0",
-    "eslint": "^9.3.0",
-    "eslint-config-next": "15.0.0-rc.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@next/eslint-plugin-next": "15.0.0-canary.7",
+    "eslint": "^9.4.0",
+    "eslint-config-next": "15.0.0-canary.7",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-c8b3f72-20240517",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-testing-library": "^6.2.2",
-    "eslint-plugin-unused-imports": "^3.2.0",
+    "eslint-plugin-unused-imports": "^4.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "turbo": "^1.13.3",
+    "turbo": "^2.0.1",
     "typescript-eslint": "8.0.0-alpha.13"
   }
 }
