--- a/turbo.json
+++ b/turbo.json
@@ -1,12 +1,18 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "pipeline": {
-    "build": {
+  "tasks": {
+    "#build": {
       "dependsOn": ["^build"],
-      "dotEnv": [".env"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
+    "backend#build": {
+      "dependsOn": ["^build"]
+    },
+    "frontend#build": {
+      "dependsOn": ["^build", "backend#restart-deploy"]
+    },
+    "backend#restart-deploy": {},
     "format": {},
     "start": {},
     "check-types": {},
