--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,7 +7,7 @@
     "build": "NODE_ENV=production pnpm prisma generate && pnpm tsc",
     "build:dev": "pnpm prisma generate && pnpm tsc",
     "start": "node ./dist",
-    "restart-deploy": "../.startOrRestart.sh",
+    "restart-deploy": "../startOrRestart.sh",
     "check-types": "tsc --noEmit",
     "dev": "pnpm nodemon ./src/index.ts"
   },
