--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,6 +9,7 @@
     "start": "node ./dist",
     "restart-deploy": "pm2 startOrRestart ~/ecosystem.config.js --name \"Photo app - backend\"",
     "check-types": "tsc --noEmit",
+    "test": "vitest",
     "dev": "pnpm nodemon ./src/index.ts"
   },
   "dependencies": {
@@ -26,32 +27,27 @@
     "@sinclair/typebox": "^0.31.17",
     "argon2": "^0.30.3",
     "axios": "^1.3.6",
-    "express-mysql-session": "^3.0.0",
-    "express-session": "^1.17.3",
     "fastify": "^4.24.3",
     "fastify-plugin": "^4.5.1",
     "fastify-socket.io": "^5.0.0",
     "fastify-zod": "^1.4.0",
-    "file-type": "^18.5.0",
     "imagekit": "^4.1.3",
     "ms": "^2.1.3",
+    "nanoid": "^5.0.7",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "prisma": "^5.13.0",
-    "short-unique-id": "^5.0.3",
     "socket.io": "^4.6.1",
-    "uuid": "^9.0.0",
     "zod-to-json-schema": "^3.20.4"
   },
   "devDependencies": {
     "@swc/core": "1.5.7",
-    "@types/express-mysql-session": "^2.1.3",
     "@types/ms": "^0.7.31",
-    "@types/pg": "^8.11.6",
-    "@types/uuid": "^9.0.1",
     "nodemon": "^3.1.0",
+    "pino-pretty": "^11.2.0",
     "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
-    "typescript": "5.5.0-beta"
+    "typescript": "5.5.0-beta",
+    "vitest": "^1.6.0"
   }
 }
