--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,12 +6,12 @@
 	"scripts": {
 		"build": "NODE_ENV=production pnpm prisma generate && pnpm tsc",
 		"build:dev": "pnpm prisma generate && pnpm tsc",
-		"start": "node ./dist",
+		"start": "node ./dist/src",
 		"restart-deploy": "pm2 startOrRestart ~/ecosystem.config.js --name \"Photo app - backend\"",
 		"check-types": "tsc --noEmit",
 		"test": "vitest",
 		"coverage": "vitest run --coverage",
-		"dev": "pnpm tsx watch ./src/index.ts"
+		"dev": "pnpm tsx watch ./src/index.ts -esm --swc"
 	},
 	"dependencies": {
 		"@fastify/cookie": "^9.3.1",
