--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,8 +18,8 @@
 		"@hookform/resolvers": "^3.3.1",
 		"@phosphor-icons/react": "^2.0.13",
 		"@qdrant/openapi-typescript-fetch": "^1.2.6",
-		"@radix-ui/react-dropdown-menu": "^2.1.0-rc.5",
-		"@radix-ui/react-tooltip": "^1.1.0-rc.5",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-tooltip": "^1.1.1",
 		"@tanstack/react-query": "^5.45.0",
 		"clsx": "^2.1.1",
 		"imagekit": "^5.0.1",
