--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,24 @@
 name: CI
 on:
-  push:
-    branches: ["main"]
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  - push
+  - pull_request
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  lint-and-format:
     timeout-minutes: 15
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
           cache: "pnpm"
-      - name: install
+      - name: Install dependencies
         run: pnpm install
       - name: ESLint
         run: pnpm lint
