--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,7 @@
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "//#restart-frontend": {
-      "dependsOn": ["frontend#build"]
+      "dependsOn": ["^frontend#build"]
     },
     "format": {},
     "lint": {},
