--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/compat": "^1.0.3",
+    "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.4.0",
+    "@eslint/js": "^9.8.0",
     "@next/eslint-plugin-next": "15.0.0-rc.0",
     "@types/eslint__js": "^8.42.3",
-    "eslint": "^9.4.0",
+    "eslint": "^9.8.0",
     "eslint-config-next": "15.0.0-rc.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-testing-library": "^6.2.2",
-    "eslint-plugin-unused-imports": "^4.0.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "turbo": "^2.0.4",
-    "typescript": "5.5.0-beta",
-    "typescript-eslint": "^7.13.0"
+    "eslint-plugin-unused-imports": "^4.0.1",
+    "husky": "^9.1.3",
+    "lint-staged": "^15.2.7",
+    "turbo": "^2.0.9",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.17.0"
   }
 }
