--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,11 +23,12 @@
 		"@radix-ui/react-tooltip": "^1.1.1",
 		"@tanstack/react-query": "^5.50.1",
 		"clsx": "^2.1.1",
+		"framer-motion": "^11.3.21",
 		"imagekit": "^5.0.1",
 		"jotai": "^2.8.0",
 		"lodash.debounce": "^4.0.8",
 		"nanoid": "^5.0.7",
-		"next": "15.0.0-canary.58",
+		"next": "15.0.0-canary.95",
 		"next-themes": "^0.3.0",
 		"react": "19.0.0-rc.0",
 		"react-dom": "19.0.0-rc.0",
@@ -54,6 +55,6 @@
 		"postcss": "^8.4.39",
 		"postcss-custom-media": "^10.0.8",
 		"postcss-nesting": "^12.1.5",
-		"typescript": "5.4.5"
+		"typescript": "5.6.0-beta"
 	}
 }
