--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "husky": "^9.1.3",
     "lint-staged": "^15.2.7",
     "turbo": "^2.0.9",
-    "typescript": "^5.5.4",
+    "typescript": "5.6.0-beta",
     "typescript-eslint": "^7.17.0"
   }
 }
