--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,6 +24,8 @@
 		"@prisma/client": "^5.15.0",
 		"@quixo3/prisma-session-store": "^3.1.13",
 		"@sinclair/typebox": "^0.31.17",
+		"@types/adm-zip": "^0.5.5",
+		"adm-zip": "^0.5.16",
 		"argon2": "^0.40.3",
 		"cloudinary": "^2.4.0",
 		"fastify": "^4.28.0",
