--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,13 +24,12 @@
 		"@prisma/client": "^5.15.0",
 		"@quixo3/prisma-session-store": "^3.1.13",
 		"@sinclair/typebox": "^0.31.17",
-		"@types/adm-zip": "^0.5.5",
-		"adm-zip": "^0.5.16",
 		"argon2": "^0.40.3",
 		"cloudinary": "^2.4.0",
 		"fastify": "^4.28.0",
 		"fastify-plugin": "^4.5.1",
 		"fastify-socket.io": "^5.0.0",
+		"file-type": "^19.5.0",
 		"ms": "^2.1.3",
 		"nanoid": "^5.0.7",
 		"prisma": "^5.15.0",
